--- a/lesson3.ipynb
+++ b/lesson3.ipynb
@@ -798,14 +798,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "\r\n",
+      "Initial commit\r\n",
+      "\r\n",
+      "Untracked files:\r\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\r\n",
+      "\r\n",
+      "\t\u001b[31m.gitignore\u001b[m\r\n",
+      "\t\u001b[31mdata.txt\u001b[m\r\n",
+      "\t\u001b[31mgit-github.ipynb\u001b[m\r\n",
+      "\t\u001b[31mhist.txt\u001b[m\r\n",
+      "\t\u001b[31mlesson1.py\u001b[m\r\n",
+      "\t\u001b[31mlesson3.ipynb\u001b[m\r\n",
+      "\t\u001b[31mlesson_1.ipynb\u001b[m\r\n",
+      "\t\u001b[31mromeo.txt\u001b[m\r\n",
+      "\t\u001b[31mtobe.txt\u001b[m\r\n",
+      "\t\u001b[31mtumo-tf/\u001b[m\r\n",
+      "\t\u001b[31muntitled.txt\u001b[m\r\n",
+      "\t\u001b[31mwrite_read.txt\u001b[m\r\n",
+      "\r\n",
+      "nothing added to commit but untracked files present (use \"git add\" to track)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "!git.stat"
+    "!git add ./\\*.ipynb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!git add ./\\*.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "\r\n",
+      "Initial commit\r\n",
+      "\r\n",
+      "Changes to be committed:\r\n",
+      "  (use \"git rm --cached <file>...\" to unstage)\r\n",
+      "\r\n",
+      "\t\u001b[32mnew file:   git-github.ipynb\u001b[m\r\n",
+      "\t\u001b[32mnew file:   lesson1.py\u001b[m\r\n",
+      "\t\u001b[32mnew file:   lesson3.ipynb\u001b[m\r\n",
+      "\t\u001b[32mnew file:   lesson_1.ipynb\u001b[m\r\n",
+      "\r\n",
+      "Untracked files:\r\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\r\n",
+      "\r\n",
+      "\t\u001b[31m.gitignore\u001b[m\r\n",
+      "\t\u001b[31mdata.txt\u001b[m\r\n",
+      "\t\u001b[31mhist.txt\u001b[m\r\n",
+      "\t\u001b[31mromeo.txt\u001b[m\r\n",
+      "\t\u001b[31mtobe.txt\u001b[m\r\n",
+      "\t\u001b[31mtumo-tf/\u001b[m\r\n",
+      "\t\u001b[31muntitled.txt\u001b[m\r\n",
+      "\t\u001b[31mwrite_read.txt\u001b[m\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!git add .gitignore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "\r\n",
+      "Initial commit\r\n",
+      "\r\n",
+      "Changes to be committed:\r\n",
+      "  (use \"git rm --cached <file>...\" to unstage)\r\n",
+      "\r\n",
+      "\t\u001b[32mnew file:   .gitignore\u001b[m\r\n",
+      "\t\u001b[32mnew file:   git-github.ipynb\u001b[m\r\n",
+      "\t\u001b[32mnew file:   lesson1.py\u001b[m\r\n",
+      "\t\u001b[32mnew file:   lesson3.ipynb\u001b[m\r\n",
+      "\t\u001b[32mnew file:   lesson_1.ipynb\u001b[m\r\n",
+      "\r\n",
+      "Changes not staged for commit:\r\n",
+      "  (use \"git add <file>...\" to update what will be committed)\r\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\r\n",
+      "\r\n",
+      "\t\u001b[31mmodified:   lesson3.ipynb\u001b[m\r\n",
+      "\r\n",
+      "Untracked files:\r\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\r\n",
+      "\r\n",
+      "\t\u001b[31mdata.txt\u001b[m\r\n",
+      "\t\u001b[31mhist.txt\u001b[m\r\n",
+      "\t\u001b[31mromeo.txt\u001b[m\r\n",
+      "\t\u001b[31mtobe.txt\u001b[m\r\n",
+      "\t\u001b[31mtumo-tf/\u001b[m\r\n",
+      "\t\u001b[31muntitled.txt\u001b[m\r\n",
+      "\t\u001b[31mwrite_read.txt\u001b[m\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master (root-commit) 22d93d1] first commit\r\n",
+      " 5 files changed, 6595 insertions(+)\r\n",
+      " create mode 100644 .gitignore\r\n",
+      " create mode 100644 git-github.ipynb\r\n",
+      " create mode 100644 lesson1.py\r\n",
+      " create mode 100644 lesson3.ipynb\r\n",
+      " create mode 100644 lesson_1.ipynb\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"first commit\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "!git remote add origin https://github.com/Lusinei/Tumo_python.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "Your branch is up-to-date with 'origin/master'.\r\n",
+      "Changes not staged for commit:\r\n",
+      "  (use \"git add <file>...\" to update what will be committed)\r\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\r\n",
+      "\r\n",
+      "\t\u001b[31mmodified:   lesson3.ipynb\u001b[m\r\n",
+      "\r\n",
+      "Untracked files:\r\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\r\n",
+      "\r\n",
+      "\t\u001b[31mdata.txt\u001b[m\r\n",
+      "\t\u001b[31mhist.txt\u001b[m\r\n",
+      "\t\u001b[31mromeo.txt\u001b[m\r\n",
+      "\t\u001b[31mtobe.txt\u001b[m\r\n",
+      "\t\u001b[31mtumo-tf/\u001b[m\r\n",
+      "\t\u001b[31muntitled.txt\u001b[m\r\n",
+      "\t\u001b[31mwrite_read.txt\u001b[m\r\n",
+      "\r\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
