--- a/lesson3.ipynb
+++ b/lesson3.ipynb
@@ -652,7 +652,9 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -672,7 +674,9 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -691,7 +695,9 @@
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -737,7 +743,9 @@
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -748,7 +756,9 @@
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -759,7 +769,9 @@
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -780,7 +792,9 @@
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -800,7 +814,9 @@
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -839,7 +855,9 @@
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -850,7 +868,9 @@
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -861,7 +881,9 @@
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -903,7 +925,9 @@
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -914,7 +938,9 @@
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -962,7 +988,9 @@
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -987,7 +1015,9 @@
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -998,7 +1028,9 @@
    "cell_type": "code",
    "execution_count": 79,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1009,7 +1041,9 @@
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1045,9 +1079,548 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "!git add -u # add only modified files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "Your branch is up-to-date with 'origin/master'.\r\n",
+      "Changes to be committed:\r\n",
+      "  (use \"git reset HEAD <file>...\" to unstage)\r\n",
+      "\r\n",
+      "\t\u001b[32mmodified:   lesson3.ipynb\u001b[m\r\n",
+      "\r\n",
+      "Untracked files:\r\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\r\n",
+      "\r\n",
+      "\t\u001b[31mdata.txt\u001b[m\r\n",
+      "\t\u001b[31mhist.txt\u001b[m\r\n",
+      "\t\u001b[31mromeo.txt\u001b[m\r\n",
+      "\t\u001b[31mtobe.txt\u001b[m\r\n",
+      "\t\u001b[31mtumo-tf/\u001b[m\r\n",
+      "\t\u001b[31muntitled.txt\u001b[m\r\n",
+      "\t\u001b[31mwrite_read.txt\u001b[m\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 5564c1a] adding changes\r\n",
+      " 1 file changed, 247 insertions(+), 2 deletions(-)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"adding changes\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2017-03-25 18:03:37--  https://raw.githubusercontent.com/tumregels/tumo-tf/master/downloader.ipynb\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.12.133\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.12.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 4476 (4.4K) [text/plain]\n",
+      "Saving to: ‘downloader.ipynb’\n",
+      "\n",
+      "downloader.ipynb    100%[===================>]   4.37K  --.-KB/s    in 0s      \n",
+      "\n",
+      "2017-03-25 18:03:37 (60.7 MB/s) - ‘downloader.ipynb’ saved [4476/4476]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://raw.githubusercontent.com/tumregels/tumo-tf/master/downloader.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2017-03-25 18:05:26--  https://github.com/tumregels/tumo-tf/raw/master/numpy-tutorial-solved.ipynb\n",
+      "Resolving github.com (github.com)... 192.30.253.113, 192.30.253.112\n",
+      "Connecting to github.com (github.com)|192.30.253.113|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://raw.githubusercontent.com/tumregels/tumo-tf/master/numpy-tutorial-solved.ipynb [following]\n",
+      "--2017-03-25 18:05:26--  https://raw.githubusercontent.com/tumregels/tumo-tf/master/numpy-tutorial-solved.ipynb\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.12.133\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.12.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1582753 (1.5M) [text/plain]\n",
+      "Saving to: ‘numpy-tutorial-solved.ipynb’\n",
+      "\n",
+      "numpy-tutorial-solv 100%[===================>]   1.51M  2.40MB/s    in 0.6s    \n",
+      "\n",
+      "2017-03-25 18:05:27 (2.40 MB/s) - ‘numpy-tutorial-solved.ipynb’ saved [1582753/1582753]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://github.com/tumregels/tumo-tf/raw/master/numpy-tutorial-solved.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def salute(name, greeting='Hallo', punct='!'):\n",
+    "    return greeting + ' ' + name + punct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hallo Sparta!'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salute(\"Sparta\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Welcome Sparta!!!!'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salute(\"Sparta\",\"Welcome\",\"!!!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def f(a, b):\n",
+    "        print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('apple', 'apricot')\n",
+      "('apple', 'apricot')\n"
+     ]
+    }
+   ],
+   "source": [
+    "f('apple', 'apricot')\n",
+    "# l = ['apple', 'apricot']\n",
+    "f(*l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def f(*args):\n",
+    "    print(\"args is \", args)\n",
+    "    print(type(args))\n",
+    "    for i in args:\n",
+    "        print(i)\n",
+    "    print(sum(args))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('args is ', (1, 2, 3))\n",
+      "<type 'tuple'>\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "f(1,2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def sum_of_powers(*args,power=1):\n",
+    "    s=0\n",
+    "    for i in args:\n",
+    "        s=s+i**power\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "sum_of_powers(1,2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "s=sum_of_powers(1,2,3,power=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "sum?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['to', 'be', 'or', 'not', 'to', 'be']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s=\"to be or not to be\"\n",
+    "words=s.split(\" \")\n",
+    "words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'to be or not to be'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\" \".join(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    ">>> u = [1,2,3]\n",
+    ">>> v = ('a', 'b', 'c')\n",
+    ">>> w = [4,5,6]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "(a,b,c)=v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'b'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'a', 2: 'b', 3: 'c'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(list(zip(u,v)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -1055,21 +1628,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
